Add get all patient by userId
